Fix overflow issue of page content
Currently a long table in a page will overflow the white card background, since `overflow: initial` means `overflow: visible`.

--- a/resources/sass/_blocks.scss
+++ b/resources/sass/_blocks.scss
@@ -180,7 +180,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: $-xl;
-  overflow: initial;
+  overflow: hidden;
   min-height: 60vh;
   &.auto-height {
     min-height: 0;
